--- a/index.html
+++ b/index.html
@@ -28,14 +28,23 @@
         <!-- Just an image -->
         <nav class="navbar navbar-light bg-light">
             <div class="container">
-                <a class="navbar-brand" href="#">
-                    <img class="image-logo" src="assets/newlogo.svg" alt="" width="120" height="30">
-                </a>
+                <div class="brand-logo">
+                    <a class="navbar-brand" href="#">
+                        <img class="image-logo" src="assets/newlogo.svg" alt="" width="120" height="30">
+                    </a>
+                </div>
+            </div>
+            <div class="container justify-content-center">
+                <div class="brand-logo-center">
+                    <a class="navbar-brand" href="#">
+                        <img class="image-logo" src="assets/newlogo.svg" alt="" width="120" height="30">
+                    </a>
+                </div>                
             </div>
         </nav>
         <!-- Just an image -->
         <nav class="navbar navbar-light nav-2" style="background-color: #FFFC00;">
-            <div class="container justify-content-md-center">
+            <div class="container justify-content-center">
             <b class="text-cta">
                 I LOVE THIS PLANET!
             </b>
